--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,61 @@
-<footer></footer>
+<footer class="footer-container">
+    <div class="footer-top">
+        <div class="footer-brand">
+            <img src="/logo.png" alt="Logo" class="footer-logo">
+            <p>Period care that puts you first. Science-backed, body-positive, delivered with care.</p>
+            <div class="social-icons">
+                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-twitter"></i></a>
+                <a href="#"><i class="bi bi-envelope"></i></a>
+            </div>
+        </div>
+
+        <div class="footer-links">
+            <div>
+                <h5>Products</h5>
+                <ul>
+                    <li>Sanitary Pads</li>
+                    <li>Combo Kits</li>
+                    <li>Pain Relief</li>
+                    <li>Intimate Care</li>
+                    <li>Subscriptions</li>
+                </ul>
+            </div>
+            <div>
+                <h5>Support</h5>
+                <ul>
+                    <li>Help Center</li>
+                    <li>Track Order</li>
+                    <li>Returns & Exchanges</li>
+                    <li>Shipping Info</li>
+                    <li>FAQs</li>
+                </ul>
+            </div>
+            <div>
+                <h5>About</h5>
+                <ul>
+                    <li>Our Story</li>
+                    <li>Ingredients</li>
+                    <li>Sustainability</li>
+                    <li>Blog</li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+            <div>
+                <h5>Policies</h5>
+                <ul>
+                    <li>Privacy Policy</li>
+                    <li>Terms of Service</li>
+                    <li>Refund Policy</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <hr />
+
+    <div class="footer-bottom">
+        <p>© 2025 Luvwish. All rights reserved.</p>
+    </div>
+</footer>
