--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <hr />
+    <div class="footer-curve"></div>
 
     <div class="footer-bottom">
         <p>© 2025 Luvwish. All rights reserved.</p>
