--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,5 +1,5 @@
 .main-header {
-    background: linear-gradient(180deg, #FFCCE0 -29.14%, rgba(255, 204, 224, 0) 80.28%);
+    background-color: #ffe4efda;
 }
 
 .label {
