--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,6 +1,6 @@
 .hero-container {
     background: linear-gradient(#fff0f5, #ffe5ee00);
-    padding: 4rem 8%;
+    padding: 2rem 3rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -69,7 +69,6 @@
     display: inline-block;
 }
 
-/* Curved underline */
 .hero-left h2 span::after {
     content: '';
     position: absolute;
@@ -148,7 +147,7 @@
 .review-section {
     display: flex;
     align-items: center;
-    gap: 2rem;
+    gap: 0.5rem;
     position: relative;
 }
 
