--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,9 +1,9 @@
 .main-header {
-    background-color: #ffe4efda;
+    background-color: #fff0f5;
 }
 
 .label {
-    background-color: #FFE4EF;
+    background-color: #ffe4efac;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     line-height: 20px;
